--- a/BlazorApp1/wwwroot/index.html
+++ b/BlazorApp1/wwwroot/index.html
@@ -16,7 +16,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+    <!-- Quill Editor -->
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
+
+
 </head>
+
+    <script>
+        function initializeQuill(editorId) {
+            var quill = new Quill("#" + editorId, {
+                theme: "snow"
+            });
+
+            quill.on("text-change", function () {
+                document.getElementById(editorId + "-hidden").value = quill.root.innerHTML;
+            });
+        }
+
+        function getQuillContent(hiddenFieldId) {
+            var hiddenField = document.getElementById(hiddenFieldId);
+            return hiddenField.value;  // Return the latest content
+        }
+
+    </script>
 
 <body>
     <div id="app">
